# mhserver-client

./: .gitignore  Cargo.toml
api/: Cargo.toml  README.md  config.yaml
api/.openapi-generator/: FILES
api/docs/: ConnectionResponse.md  DefaultApi.md  SaveChunk.md
api/src/: auth.rs  data.rs  endpoints.rs  lib.rs  ping.rs
api/src/apis/: configuration.rs  default_api.rs
api/src/models/: connection_mode.rs  connection_request.rs  connection_response.rs  files_list_inner.rs  mod.rs  save_chunk.rs  user_login_request.rs  user_register_request.rs
api/templates/: api.mustache  api_mod.mustache
api/templates/reqwest/: api.mustache  api_mod.mustache
src/: actions.rs  authorization.rs  config.rs  connect.rs  connection.rs  main.rs  notification.rs
src/app/: errors.rs  mod.rs
src/app/callbacks/: auth.rs  files.rs  mod.rs  preparing.rs  service.rs  tools.rs  window.rs
src/config/: api.rs  app.rs  auth.rs  com.rs  files.rs  mod.rs
src/http/: authorization.rs  mod.rs  tools.rs
src/repository/: dirs.rs  filetypes.rs  mod.rs  ratelimit.rs
src/service/: auth.rs  files.rs  mod.rs  tools.rs
src/service/files/: connections.rs  mod.rs  path.rs  queue.rs
ui/: app-window.slint  connection.slint  notification.slint
ui/components/: button.slint  notification.slint  progress_indicator.slint
ui/fields/: authorization.slint  base.slint  connection.slint  service.slint
ui/fields/services/: data.slint  files.slint
