[package]
name = "mhserver-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
openapi = { path = "./api" }
reqwest = { version = "0.13.1", features = ["json", "rustls"] }
slint = "1.15.1"
tokio = { version = "1.49.0", features = ["full"] }
serde = "1.0.228"
toml = "0.9.11"
uuid = "1.23.1"
system-interface = "0.27.3"

[build-dependencies]
slint-build = "1.15.1"
